add support for runtime defined plugin & add the infrastructure to change the current directory at runtime with local()